# AIP-Academic-Projects

./: README.md
3MOD/: ProjectZomboid.cpp
Homework_1_Benchmark/: CMakeLists.txt
Homework_1_Benchmark/src/: BenchmarkSuite.cpp  BenchmarkSuite.h  Sorting.h  Timer.cpp  Timer.h  main.cpp
Homework_1_Benchmark/tests/: testMain.cpp
Homework_2_BasicUT/: CMakeLists.txt
Homework_2_BasicUT/src/: Date.cpp  Date.h  WeekNumberCalculator.cpp  WeekNumberCalculator.h  main.cpp
Homework_2_BasicUT/tests/: testMain.cpp
